<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Data"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"/>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_50_horizontal"
        app:layout_constraintRight_toRightOf="@id/guideline_50_horizontal"
        app:layout_constraintTop_toTopOf="@id/guideline_50_vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline_50_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_50_horizontal"
        app:layout_constraintStart_toStartOf="@id/guideline_50_horizontal"/>
    <!-- Constraint Guideline-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_50_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_50_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>